...
import com.android.wildex.ui.navigation.NavigationTestTags
import com.android.wildex.ui.utils.CountryDropdown
import com.android.wildex.ui.utils.offline.OfflineScreen

object EditProfileScreenTestTags {
  const val GO_BACK = "edit_profile_screen_go_back_button"
  const val INPUT_NAME = "edit_profile_screen_input_name"
  const val INPUT_SURNAME = "edit_profile_screen_input_surname"
  const val INPUT_USERNAME = "edit_profile_screen_input_username"
  const val INPUT_DESCRIPTION = "edit_profile_screen_input_description"
  const val PROFILE_PICTURE_PREVIEW = "edit_profile_screen_profile_picture_preview"
  const val SAVE = "edit_profile_screen_go_save_button"
  const val ERROR_MESSAGE = "edit_profile_screen_error_message"
}

/**
 * Screen composable for creating or editing a user profile.
 *
...
