...

          var text by remember { mutableStateOf("") }

          OutlinedTextField(
              value = text,
              onValueChange = { text = it },
              placeholder = { Text(text = "Add a comment …", style = typography.bodyMedium) },
              modifier = Modifier.weight(1f),
              shape = RoundedCornerShape(32.dp),
              singleLine = true,
              keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
              trailingIcon = {
                IconButton(
...
                        postDetailsScreenViewModel.addComment(text)
                        text = ""
                      }
                    }) {
                      Icon(
                          imageVector = Icons.AutoMirrored.Filled.Send,
                          contentDescription = "Send comment",
                          tint = colorScheme.primary,
                      )
                    }
              },
          )
        }
...
